Bug 326843 DeCOMtaminate some of nsComboboxControlFrame. Patch by marcldl+mozbugs@gmail.com.  r+sr=roc.